# mini_car

./: README.md
car_description/: package.xml
car_gazebo/: CMakeLists.txt  package.xml
car_gazebo/launch/: navigation_demo_diff.launch
car_gazebo/launch/base_launch/: diffbot.launch  move_base_diff.launch
car_gazebo/rviz/: nav.rviz
car_gazebo/scripts/: odom_pub.py
car_gazebo/worlds/: maze.world
diff/diff_wheeled_robot_control/: package.xml
diff/diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo.launch
diff/diff_wheeled_robot_gazebo/urdf/: diff_wheeled_robot.xacro  wheel.urdf.xacro
diff_navigation/include/: diff_controller.h
diff_navigation/src/: diff_controller.cpp
navigation/move_base/include/move_base/: move_base.h
navigation/move_base/src/: move_base.cpp
navigation/rrt_global_planner/: package.xml  rrt_global_planner_plugin.xml
navigation/rrt_global_planner/include/: 2d_space.hpp
navigation/rrt_global_planner/params/: rrt_global_planner.yaml
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/config/: config.cfg  pure_pursuit_params.yaml
pure_pursuit/include/: pure_pursuit_server.h
pure_pursuit/include/pure_pursuit/: pure_pursuit.h
pure_pursuit/launch/: pure_pursuit.launch
pure_pursuit/src/: pure_pursuit.cpp
pure_pursuit_fp/: CMakeLists.txt  package.xml
pure_pursuit_fp/action/: PurePursuit.action
pure_pursuit_fp/config/: config.cfg  pure_pursuit_params.yaml
pure_pursuit_fp/launch/: pure_pursuit_fp.launch
pure_pursuit_fp/src/: pure_pursuit_client.cpp  pure_pursuit_fp.cpp  pure_pursuit_fp_class.cpp  pure_pursuit_server.cpp
qr_detection/launch/: detector.launch
qr_detection/models/fruit/: model-1_5.sdf  model.config  model.sdf
qr_detection/models/fruit/meshes/: fruit.dae
qr_detection/models/meat/: model-1_5.sdf  model.config  model.sdf
qr_detection/models/meat/meshes/: meat.dae
qr_detection/models/vegetable/: model-1_5.sdf  model.config  model.sdf
qr_detection/models/vegetable/meshes/: vegetable.dae
qr_detection/src/: detector.cpp  qr_detector_nodelet.cpp
racebot_control/: CMakeLists.txt  package.xml
racebot_control/launch/: ackermannbot_control.launch
racebot_description/: package.xml
racebot_description/urdf/ackermann/: ackermanncar.gazebo  ackermanncar.xacro
racebot_description/urdf/diff/: diff.xacro
racebot_description/urdf/mecanum/: base_drive.gazebo  mecanum_base.xacro  mecanumcar.xacro
racebot_description/urdf/waking_robot/: waking_robot.xacro
racebot_gazebo/: CMakeLists.txt  package.xml
racebot_gazebo/config/: global_costmap_params.yaml  local_costmap_params.yaml  rrt_global_planner.yaml  teb_local_planner_params_mecanum.yaml
racebot_gazebo/config/teb/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_ackermann.yaml  teb_local_planner_params_mecanum.yaml
racebot_gazebo/launch/: astar_dwa.launch  astar_teb.launch  manual_map.launch  navigation_demo.launch  navigation_demo_ackermann.launch  navigation_demo_diff.launch  navigation_demo_mecanum.launch  navigation_demo_robot.launch  navigation_map.launch  rrt_dwa.launch  rrt_teb.launch
racebot_gazebo/launch/base_launch/: ackermannbot.launch  amcl.launch  astar_dwa_move_base.launch  astar_teb_move_base.launch  diffbot.launch  ekf.launch  gmapping.launch  mecanumbot.launch  move_base_diff.launch  navigation.launch  racebot.launch  rrt_dwa_move_base.launch  rrt_teb_move_base.launch  slam_navi.launch  teb_base_ackermann.launch  teb_base_diff.launch  teb_base_mecanum.launch  waking_robot.launch
racebot_gazebo/map/: factory.pgm  factory.yaml  maze.pgm  roadmap.yaml  room.pgm  signs_world.pgm  signs_world.yaml  test.pgm
racebot_gazebo/rviz/: gmapping.rviz  nav.rviz
racebot_gazebo/src/: stop.cpp
racebot_gazebo/worlds/: factory.world  for_pgm.world  roadmap.world  room_mini.world  signs_world.world  test.world
simu/urdf/: xju_ackermann_model.urdf.xacro
vision_detection/: CMakeLists.txt  package.xml
vision_detection/Training_Images/no_right/: 1.ppm  10.ppm  11.ppm  12.ppm  13.ppm  14.ppm  15.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm
vision_detection/Training_Images/parking/: 1.ppm  10.ppm  11.ppm  12.ppm  13.ppm  14.ppm  15.ppm  16.ppm  17.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm
vision_detection/include/: classifier.hpp
vision_detection/launch/: exe.launch
vision_detection/src/: classifier.cpp  vision_node.cpp
