<package format="2">
  <name>car_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for car_description</description>
  <author>TODO</author>
  <maintainer email="fantasyplus123@gmail.com"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <export>
    <architecture_independent />
  </export>
</package>