<?xml version="1.0"?>
<package format="2">
  <name>car_gazebo</name>
  <version>0.0.0</version>
  <description>The car_gazebo package</description>

  <maintainer email="fantasyplus123@gmail.com"></maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>robot_pose_ekf</depend>
  
  <export>
    <architecture_independent />
  </export>
</package>
