<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>The pure_pursuit package</description>

  <maintainer email="fantasyplus@qq.com">fantasyplus</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

</package>