<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit_fp</name>
  <version>0.0.0</version>
  <description>The pure_pursuit package</description>

  <author email="fantasyplus@qq.com">fantasyplus</author>
  <maintainer email="fantasyplus@qq.com">fantasyplus</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_generation</depend>
  <depend>actionlib_msgs</depend>
  <depend>nav_msgs</depend>
</package>