<?xml version="1.0"?>
<package format="2">
  <name>rrt-global-planner</name>
  <version>0.0.0</version>
  <description>The rrt-global-planner package</description>

  <maintainer email="craigdanielmiller@gmail.com">Craig Miller</maintainer>

  <license>BSD</license>

  <author email="craigdanielmiller@gmail.com">Craig Miller</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nav_core plugin="${prefix}/rrt_global_planner_plugin.xml" />
  </export>

</package>
